work on IDE warnings